style.css
/* ... */
.clickable {
    position: relative;
    display: flex;
    margin: 0 30px 0 30px;
    padding: 0;
    vertical-align: top;
    text-decoration: none;
    align-items: center;
    font-family: 'LuckiestGuy';
    text-transform: uppercase;
    font-size: 40px;
    color: white;
    text-wrap: nowrap;
    text-shadow: -5px -5px 0 gray;
}
.clickable h1 {
    text-align: center;
    height: 50%;
}
.clickable:hover{
    opacity: 1;
}
footer {
    z-index: 2;
    position: static;
    bottom: 0;
    background-color: rgb(188, 143, 143);
    width: 100%;
    height: 20px;
    overflow: hidden;
}
footer h6 {
    
    font-family: sans-serif;
    font-size: 15px;
    text-align: center;
    line-height: 20px;
}

footer h6 a {
    color: darkblue;
}

.extendedverticalpadding {
    padding: 0 0 50px 0;
}
#back-to-home-btn{
    padding: 20px 20px;
    display: none;
    z-index: 5;
    position: absolute;

}
#back-to-home-btn img{
    width: 100px;
    height: 100px;
}


/*MOBILE VERSION*/

@media only screen and (max-width: 600px){
    #header {
        font-size: 80%;
        min-width: 100%;
        min-height: 100%;
    }
    #headingtext {
        top: 10%;
        font-size: 800%;
        letter-spacing: 20px;
        padding: 0 5%;
    }
    .clickable {
        display: inline-block;
        margin: 2vmin auto;
        font-size: calc(2vh + 1vmin);
    }
    #clickable_container {
        width: 10%;
        align-items: center;
        align-self: center;
        justify-content: center;
        top: 12%;
        height: 40%;
    }
    #descriptioncontainer {
        display: inline;
        align-content: center;
        top: 85%;
        text-align: center;
        justify-content: center;
        vertical-align: middle;
        letter-spacing: 2px;
        font-size: 100%;
        width: 100%;
        height: 15%;
    }
    #descriptiontext {
        display: inline-block;
        font-size: calc(2vh + 1vmin);;
        padding: 5px 0;
        font-size: 100%;
    
    }
    h1.section_headers {
        display: block;
        padding: 20% 5% 0 5%;
        font-size: 600%;
        height: 50%;
        width: 100%;
        letter-spacing: 1px;
        text-wrap: wrap;
    }
    div.sectionDivs {
        width: 100%;
        height: 100%;
        padding: 0 0;
    }
    p.section_bodies, ul.section_bodies {
        font-size: 115%;
        font-weight: 500;
        margin: 0 20px;
    }
    .centeredImg {
        border-radius: 50%;
        width: 120px;
        height: 120px;
        display: inline;
        position: relative;
        margin: 0 20px 25px auto;
    }
    footer {
        width: 100%;
        height: 100%;
        overflow: visible;
    }
    .imgcontainer {
        align-items: center;
        justify-content: center;
        vertical-align: middle;
        width: 100%;
        flex-wrap: wrap;
    }
    .imgcontainer img {
        vertical-align: middle;
        align-self: center;
        margin: 10px 10px;
        width: 100px;
        height: 100px;
    }
    .figureSocials{
        display: flex;
        width: 75%;
        margin: 0 auto;
        align-items: center;
        align-self: center;
        align-content: center;
        justify-content: center;
        vertical-align: middle;
        flex-wrap: wrap;
    }
    #socials figure a img{
        display: flex;
        align-items: center;
        align-self: center;
        vertical-align: middle;
    }
    #socials figure a img:hover {
        width: 120px;
        height: 120px;
    }
    #socials figure a img:not(:hover) {
        width: 100px;
        height: 100px;
    }
    .projectsBody figure figcaption {
        text-wrap: wrap;
    }
    .projectsBody figure img{
        width: auto;
        height: 175px;
    }
    #navbar {
        display: none;
    }
    #back-to-home-btn{
        padding-top: 0;
        display: inline;
        position: absolute;
    }
}

/*TYPICAL BREAKPOINTS: <600px, 601px, 768px, 992px, 1200px> */

